# kleinos

./: .gdbinit  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
