[package]
name = "kleinos"
version = "0.1.0"
authors = ["Sven Huster <github@lab7b.com>"]
edition = "2024"
description = "A bare-metal x86_64 kernel written in Rust"
license = "MPL-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
split-debuginfo = "packed"

[[bin]]
name = "kleinos"
test = true
bench = false

[lib]
test = false
bench = false

[dependencies]
bootloader = "0.9"

[package.metadata.bootimage]
run-args = ["-accel", "kvm", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-s"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33