[package]
name = "kleinos"
version = "0.1.0"
authors = ["Sven Huster <github@lab7b.com>"]
edition = "2024"
description = "A bare-metal x86_64 kernel written in Rust"
license = "MPL-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
split-debuginfo = "packed"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
x86_64 = "0.15.4"

[[bin]]
name = "kleinos"
test = false
bench = false

[package.metadata.bootimage]
run-args = ["-accel", "kvm", "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-s", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 60